# qhenki-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dependencies/include/ImGuiFileDialog-0.6.7/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
dependencies/include/mikktspace/: CMakeLists.txt  mikktspace.h
dependencies/include/spirv_cross/: CMakeLists.txt
dependencies/include/vulkan/: vulkan_funcs.hpp
resources/envmaps/: small_room.dds  small_room_irradiance.dds
resources/envmaps/artist_workshop/: artist_workshop.dds  artist_workshop_irradiance.dds  artist_workshop_radiance.dds
resources/envmaps/metro_noord/: metro_noord.dds  metro_noord_irradiance.dds
resources/envmaps/small_room/: small_room_radiance.dds
resources/shaders/: CMakeLists.txt  aces.frag  aces_frag.frag  chromatic_aberration.frag  compile_shaders.cmake  cubemap.vert  cubemap_frag.frag  cubemap_vert.vert  filmgrain.frag  fxaa_frag.frag  gbuffer.frag  gbuffer.vert  gbuffer_frag.frag  gbuffer_vert.vert  grid_plane.frag  grid_plane.vert  lighting.frag  lighting_frag.frag  lighting_vert.vert  passthrough.frag  passthrough_depth.frag  passthrough_depth_frag.frag  passthrough_frag.frag  passthrough_vert.vert  pathtrace_frag.frag  pathtrace_vert.vert  pbr_neutral.frag  pbr_neutral_frag.frag  plane.vert  reinhard.frag  reinhard_frag.frag  shader_frag.frag  shader_vert.vert  sharpen.frag  skinning.comp  solid.frag  solid_frag.frag  solid_vert.vert  tri_frag.frag  tri_vert.vert  (+2 more)
resources/shaders/include/: brdfmacros.glsl  closestpoint.glsl  tonemapper.glsl
src/: application.h  camera.cpp  camera.h  cameramatrices.h  destroyable.h  disposable.h  gltfloader.cpp  gltfloader.h  inputprocesser.cpp  inputprocesser.h  lights.h  pathtracerapp.cpp  pathtracerapp.h  userinterface.cpp  userinterface.h  vulkanapp.cpp  vulkanapp.h  window.cpp  window.h
src/lights/: lights.h
src/models/: animation.h  gltfloader.cpp  gltfloader.h  joint.cpp  joint.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.cpp  node.h  skin.h  tangentcalc.cpp  tangentcalc.h  transform.h
src/models/primitives/: primitive.cpp  primitive.h  primitivedrawer.cpp  primitivedrawer.h
src/ui/: cameramenu.cpp  cameramenu.h  lightmenu.cpp  lightmenu.h  menu.h  modelmenu.cpp  modelmenu.h  postprocessmenu.cpp  postprocessmenu.h  userinterface.cpp  userinterface.h  visualmenu.cpp  visualmenu.h
src/vfx/: postprocess.cpp  postprocess.h  postprocessmanager.cpp  postprocessmanager.h
src/vfx/effects/: chromaticaberration.cpp  chromaticaberration.h  filmgrain.cpp  filmgrain.h  fxaa.cpp  fxaa.h  reinhard.cpp  reinhard.h  sharpen.cpp  sharpen.h  vignette.cpp  vignette.h
src/vulkan/: buffer.cpp  buffer.h  bufferfactory.cpp  bufferfactory.h  bufferstruct.h  commandpool.cpp  commandpool.h  debugger.cpp  debugger.h  destroyable.h  device.h  devicepicker.cpp  devicepicker.h  frame.cpp  frame.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipelinebuilder.cpp  pipelinebuilder.h  pipelinefactory.cpp  pipelinefactory.h  queuefamilyindices.h  queuemanager.cpp  queuemanager.h  renderpass.cpp  renderpass.h  screenutils.cpp  screenutils.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  swapchainmanager.cpp  swapchainmanager.h  syncer.cpp  syncer.h  vkdebugger.cpp  vkdebugger.h  (+17 more)
src/vulkan/attachments/: FrameBuffer.cpp  FrameBuffer.h  FrameBufferAttachment.cpp  FrameBufferAttachment.h  attachment.cpp  attachment.h  framebuffer.cpp  framebuffer.h  framebufferattachment.cpp  framebufferattachment.h  gbuffer.cpp  gbuffer.h  samplersuite.cpp  samplersuite.h
src/vulkan/buffer/: buffer.cpp  buffer.h  bufferfactory.cpp  bufferfactory.h
src/vulkan/context/: queuesindices.h  swapchain.cpp  swapchain.h  vulkancontext.cpp  vulkancontext.h
src/vulkan/descriptors/: descriptorallocator.cpp  descriptorallocator.h  descriptorbuilder.cpp  descriptorbuilder.h  descriptorlayoutcache.cpp  descriptorlayoutcache.h
src/vulkan/pipeline/: pipeline.cpp  pipeline.h  pipelinefactory.cpp  pipelinefactory.h  pipelineshader.h  shader.cpp  shader.h
src/vulkan/renderpass/: renderpass.cpp  renderpass.h  renderpassbuilder.cpp  renderpassbuilder.h
src/vulkan/texture/: envmap.cpp  envmap.h  image.cpp  image.h  texture.cpp  texture.h
